--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,25 +1,35 @@
-node {
-    def mvnHome
-    stage('Preparation') { // for display purposes
-        // Get some code from a GitHub repository
-        git 'https://github.com/jglick/simple-maven-project-with-tests.git'
-        // Get the Maven tool.
-        // ** NOTE: This 'M3' Maven tool must be configured
-        // **       in the global configuration.
-        mvnHome = tool 'M3'
-    }
-    stage('Build') {
-        // Run the maven build
-        withEnv(["MVN_HOME=$mvnHome"]) {
-            if (isUnix()) {
-                sh '"$MVN_HOME/bin/mvn" -Dmaven.test.failure.ignore clean package'
-            } else {
-                bat(/"%MVN_HOME%\bin\mvn" -Dmaven.test.failure.ignore clean package/)
+pipeline {
+    agent any
+
+    stages {
+        stage('Hello') {
+            steps {
+                echo 'Hello World'
             }
         }
-    }
-    stage('Results') {
-        junit '**/target/surefire-reports/TEST-*.xml'
-        archiveArtifacts 'target/*.jar'
+        stages {
+        stage('Build') {
+            steps {
+                echo 'building'
+            }
+        }
+        stages {
+        stage('Deploy') {
+            steps {
+                echo 'Deploying'
+            }
+        }
+        stages {
+        stage('Test') {
+            steps {
+                echo 'Testing'
+            }
+        }
+        stages {
+        stage('Release') {
+            steps {
+                echo 'Realeasing'
+            }
+        }
     }
 }
