--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
     node {
   stage('SCM') {
-    git ''
+    git 'https://github.com/imkunalll/Manager.git'
   }
   stage('SonarQube analysis') {
     withSonarQubeEnv('My SonarQube Server') {
