--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,3 +1,14 @@
+node {
+  stage('SCM') {
+    git 'https://github.com/imkunalll/Manager.git'
+  }
+  stage('SonarQube analysis') {
+    def scannerHome = tool 'SonarScanner 4.0';
+    withSonarQubeEnv('My SonarQube Server') { // If you have configured more than one global server connection, you can specify its name
+      bat "${scannerHome}/bin/sonar-scanner"
+    }
+  }
+}
 pipeline {
     agent any
 
