--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,14 +4,13 @@ node {
   }
   stage('SonarQube analysis') {
     def scannerHome = tool 'SonarScanner 4.0';
-    withSonarQubeEnv('My SonarQube Server') { // If you have configured more than one global server connection, you can specify its name
+    withSonarQubeEnv('Manager') { // If you have configured more than one global server connection, you can specify its name
       bat "${scannerHome}/bin/sonar-scanner"
     }
   }
 }
 pipeline {
     agent any
-
     stages {
         stage('Hello') {
             steps {
