--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,9 +4,7 @@ node {
   }
   stage('SonarQube analysis') {
     def scannerHome = tool 'SonarScanner 4.0';
-    withSonarQubeEnv('Manager') { // If you have configured more than one global server connection, you can specify its name
-      bat "${scannerHome}/bin/sonar-scanner"
-    }
+    withSonarQubeEnv('Manager') 
   }
 }
 pipeline {
