--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,23 @@
 pipeline {
-    agent any
     stages {
+        stage('Clone sources') {
+            steps {
+                git url: 'https://github.com/imkunalll/Manager.git'
+            }
+        }
+
+        stage('SonarQube analysis') {
+            steps {
+                withSonarQubeEnv('SonarQube') {
+                    bat "./gradlew sonarqube"
+                }
+            }
+        }
+        stage("Quality gate") {
+            steps {
+                waitForQualityGate abortPipeline: true
+            }
+        }
         stage('Hello') {
             steps {
                 echo 'Hello World'
