--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,16 +7,19 @@ agent any
             }
         }
         stage("Quality Gate"){
-    timeout(time: 1, unit: 'HOURS') { // Just in case something goes wrong, pipeline will be killed after a timeout
-    def qg = waitForQualityGate() // Reuse taskId previously collected by withSonarQubeEnv
+    timeout(time: 1, unit: 'HOURS') { 
+    def qg = waitForQualityGate() 
     if (qg.status != 'OK') {
         error "Pipeline aborted due to quality gate failure: ${qg.status}"
+    }
+    }
     }
         stage('Hello') {
             steps {
                 echo 'Hello World'
             }
         }
+        
         
         stage('Build') {
             steps {
