--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,47 +1,34 @@
 pipeline {
-agent any
+    agent any
+
     stages {
-        stage('Clone sources') {
+        stage('Requirement') {
             steps {
-                git url: 'https://github.com/imkunalll/Manager.git'
-            }
-        }
-        stage("Quality Gate"){
-    timeout(time: 1, unit: 'HOURS') { 
-    def qg = waitForQualityGate() 
-    if (qg.status != 'OK') {
-        error "Pipeline aborted due to quality gate failure: ${qg.status}"
-    }
-    }
-    }
-        stage('Hello') {
-            steps {
-                echo 'Hello World'
+                echo 'Requirement gathering'
             }
         }
         
-        
-        stage('Build') {
+        stage('Planning') {
             steps {
-                echo 'building'
+                echo 'Planning'
             }
         }
         
-        stage('Deploy') {
+        stage('Designing') {
             steps {
-                echo 'Deploying'
+                echo 'Designing'
             }
         }
         
-        stage('Test') {
+        stage('Developing') {
             steps {
-                echo 'Testing'
+                echo 'Developing'
             }
         }
       
-        stage('Release') {
+        stage('Testing') {
             steps {
-                echo 'Realeasing'
+                echo 'Testing'
             }
         }
   }
