--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,13 +3,13 @@ pipeline {
     stages {
         stage('Clone sources') {
             steps {
-                git url: 'https://github.com/tkgregory/sonarqube-jacoco-code-coverage.git'
+                git url: 'https://github.com/imkunalll/Manager.git'
             }
         }
         stage('SonarQube analysis') {
             steps {
                 withSonarQubeEnv('SonarQube') {
-                    sh "./gradlew sonarqube"
+                    bat "./gradlew sonarqube"
                 }
             }
         }
