--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     stages {
         stage('Clone sources') {
             steps {
-                git url: 'https://github.com/imkunalll/Manager.git'
+                git branch: 'bad-code', url: 'https://github.com/imkunalll/Manager.git'
             }
         }
         stage('SonarQube analysis') {
