--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,5 +18,35 @@ pipeline {
                 waitForQualityGate abortPipeline: true
             }
         }
+        stages {
+        stage('Requirement') {
+            steps {
+                echo 'Requirement gathering'
+            }
+        }
+        
+        stage('Planning') {
+            steps {
+                echo 'Planning'
+            }
+        }
+        
+        stage('Designing') {
+            steps {
+                echo 'Designing'
+            }
+        }
+        
+        stage('Developing') {
+            steps {
+                echo 'Developing'
+            }
+        }
+      
+        stage('Testing') {
+            steps {
+                echo 'Testing'
+            }
+        }
     }
     }
